Brand view - pt1

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -5,9 +5,10 @@ After: framework/routes#coreroutes
 Director:
   rules:
     'search' : 'Search_Controller'
-    'brands/$ID' : 'Brand_Controller'
+    'brands/$ID/$CategoryID' : 'Brand_Controller'
     'project' : 'Project_Controller'
     'product/$ID' : 'Product_Controller'
     'color/$ID' : 'Color_Controller'
     'tags/$ID' : 'Tag_Controller'
     'categories' : 'AllCategory_Controller'
+    'loadproducts' : 'LoadProduct_Controller'
