--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,56 @@
 sftp-config.json
 silverstripe-cache
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# SILVERSTRIPE Specifics #
+##########################
+
+assets/
+silverstripe-cache/
+cache/
+
+app.yaml
+Capfile
+sftp-config.json
+
+.sass-cache/
+
+mysite/_config*
+
+subsites/host-map.php
