--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "cms"]
 	path = cms
 	url = https://github.com/silverstripe/silverstripe-cms.git
+[submodule "silverstripe-gridfield-betterbuttons"]
+	path = silverstripe-gridfield-betterbuttons
+	url = https://github.com/unclecheese/silverstripe-gridfield-betterbuttons
