--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=5.3.2",
         "silverstripe/cms": "3.2.*",
         "silverstripe/framework": "3.2.*",
+        "gdmedia/ss-auto-git-ignore": "dev-master",
         "ajshort/silverstripe-memberprofiles": "dev-master",
         "colymba/gridfield-bulk-editing-tools": "dev-master",
         "silverstripe/widgets": "dev-master",
@@ -18,6 +19,9 @@
     },
     "require-dev": {
         "silverstripe/docsviewer": "*"
+    },
+    "scripts": {
+     "post-update-cmd": "GDM\\SSAutoGitIgnore\\UpdateScript::Go"
     },
     "minimum-stability": "dev"
 }
